the solar system peacfully existing, with realistic dimentions (realistic in a way that makes it not very useful)

--- a/index.html
+++ b/index.html
@@ -16,6 +16,29 @@
                         <div id="sun" class="object"></div>
                     </div>
                 </div>
+
+                <!-- Mercury -->
+                <div class="object-box orbit mercury">
+                    <div class="orbitor">
+                        <div class="orbited">
+                            <div class="stand">
+                                <div id="mercury" class="object"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Venus -->
+                <div class="object-box orbit venus">
+                    <div class="orbitor">
+                        <div class="orbited">
+                            <div class="stand">
+                                <div id="venus" class="object"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <!-- Earth -->
                 <div class="object-box orbit earth">
                     <div class="orbitor">
@@ -35,6 +58,61 @@
                         <div class="orbited">
                             <div class="stand">
                                 <div id="earth" class="object"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Mars -->
+                <div class="object-box orbit mars">
+                    <div class="orbitor">
+                        <div class="orbited">
+                            <div class="stand">
+                                <div id="mars" class="object"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Jupiter -->
+                <div class="object-box orbit jupiter">
+                    <div class="orbitor">
+                        <div class="orbited">
+                            <div class="stand">
+                                <div id="jupiter" class="object"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Saturn -->
+                <div class="object-box orbit saturn">
+                    <div class="orbitor">
+                        <div class="orbited">
+                            <div class="stand">
+                                <div id="saturn" class="object"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Uranus -->
+                <div class="object-box orbit uranus">
+                    <div class="orbitor">
+                        <div class="orbited">
+                            <div class="stand">
+                                <div id="uranus" class="object"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Neptune -->
+                <div class="object-box orbit neptune">
+                    <div class="orbitor">
+                        <div class="orbited">
+                            <div class="stand">
+                                <div id="neptune" class="object"></div>
                             </div>
                         </div>
                     </div>
