added Day counter

--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
         <link rel="stylesheet" href="style/main.css" />
     </head>
     <body>
-        <!-- the multy nesting is to maintain the animations and prevent `transform` property overriding -->
+        <header>
+            <div class="day-counter">day: <span id="currentDay">0</span></div>
+        </header>
         <main>
+            <!-- the multy nesting is to maintain the animations and prevent `transform` property overriding -->
             <div class="net">
                 <!-- Sun -->
                 <div class="object-box sun">
